--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,6 +26,7 @@
       <div class="row">
         <div class="span3 sidebar">
           <div class="profile"><img src="img/profile.jpg"></div>
+          <div class="clearfix"></div>
           <div class="contact-info">
             <h3>Reed La Botz</h3>
             <p>
