--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="row">
         <div class="span3 sidebar">
-          <div class="profile"><img src="img/profile.jpg"></div>
+          <div class="profile"><img class="profile-start" src="img/profile.jpg"><img class="profile-hover" src="img/profile_b.jpg"></div>
           <div class="clearfix"></div>
           <div class="contact-info">
             <h3>Reed La Botz</h3>
